# dev-sandbox

./: .dockerignore  .gitignore  .gitleaks.toml  .graphifyignore  AGENTS.md  README.md  claude_suggestions.md  docker-compose.devboard.amd64.yaml  docker-compose.devboard.prod.yaml  docker-compose.devboard.traefik.yaml  docker-compose.devboard.yaml
agent/: package.json
agent/src/: probe.js  (+2 more)
ai-sandbox/: INIT.md
analyzer/: pyproject.toml
analyzer/src/devboard_analyzer/: __init__.py  code_graph.py  delta_bundle.py  file_hashes.py  file_inventory.py  genesis_bundle.py  safety.py
analyzer/src/devboard_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analyzer/tests/: test_analyzer_smoke.py  test_code_graph.py  test_delta_bundle.py  test_file_inventory.py  test_genesis_bundle.py  test_safety.py
backend/: .env.example  composer.json  package-lock.json  package.json  phpstan.neon.dist  phpunit.postgres.xml  phpunit.xml  vite.config.js
docs/: backend-agent-coordination.md
plugin/: .mcp.json  pyproject.toml
plugin/.codex-plugin/: plugin.json
plugin/src/devboard_plugin/: __init__.py  artifacts.py  cli.py  client.py  config.py  git_local.py  mcp_server.py  mcp_tools.py  secure_io.py  state.py
plugin/src/devboard_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugin/tests/: test_artifact_upload.py  test_cli_smoke.py  test_client.py  test_codex_plugin_manifest.py  test_config.py  test_delta_command.py  test_genesis_command.py  test_mcp_tools.py  test_repo_link.py  test_runs.py  test_work_queue_tools.py
(+735 files in other folders)
