[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "devboard-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
